Add LastAppliedBuild to subscriptions and implement delete source branch for merging PRs. (#589)
* Add LastAppliedBuild to subscriptions and implement delete source branch for merging PRs.

* Don't fail when build.Dependencies is null.
